TODO -> continuer CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,16 @@ pkg_search_module(GLFW REQUIRED glfw3)
 
 find_library(SOIL SOIL lib/libsoil.a)
 
+set(SPECTRIX_LIBS_DIR "libs")
+set(RTAUDIO_DIR "${SPECTRIX_LIBS_DIR}/rtaudio-5.1.0")
+
 include_directories(
   ${GLM_INCLUDE_DIRS}
   ${GLEW_INCLUDE_DIRS}
   ${GLFW_INCLUDE_DIRS}
   ${OPENGL_INCLUDE_DIRS}
+  ${RTAUDIO_DIR}
+  "${RTAUDIO_DIR}/include"
 )
 
 link_libraries(
@@ -26,6 +31,8 @@ link_libraries(
   ${GLFW_LIBRARIES}
   ${OPENGL_LIBRARIES}
 )
+
+link_directories("${RTAUDIO_DIR}/librtaudio_la-RtAudio.o")
 
 file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
 
